<package>
  <name>CarPlanner</name>
  <version>0.0.0</version>
  <description>The mocha predictive control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mike@todo.todo">mike</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export> -->

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>




</package>
